@@ -126,26 +126,6 @@
 	<menuitem name="CopyImageLocationDP" action="CopyImageLocation"/>
 </popup>
 
-<popup name="EphyFullscreenDocumentPopup" action="PopupAction">
-	<menuitem name="GoBackFSDP" action="NavigationBack"/>
-	<menuitem name="GoForwardFSDP" action="NavigationForward"/>
-	<menuitem name="GoReloadFSDP" action="ViewReload"/>
-	<separator />
-	<menuitem name="EditCopyFSDP" action="EditCopy"/>
-	<separator />
-	<menuitem name="SavePageAsFSDP" action="FileSaveAs"/>
-	<menuitem name="BookmarkPageFSDP" action="ContextBookmarkPage"/>
-	<separator />
-	<menuitem name="OpenFrameFSFDP" action="OpenFrame"/>
-	<separator />
-	<menuitem name="ViewToolbarFSDP" action="ViewToolbar"/>
-	<separator />
-	<menuitem name="OpenImageFSDP" action="OpenImage"/>
-	<menuitem name="SaveImageAsFSDP" action="SaveImageAs"/>
-	<menuitem name="SetImageAsBackgroundFSDP" action="SetImageAsBackground"/>
-	<menuitem name="CopyImageLocationFSDP" action="CopyImageLocation"/>
-</popup>
-
 <popup name="EphyLinkPopup" action="PopupAction">
 	<menuitem name="OpenLinkLP" action="OpenLink"/>
         <menuitem name="OpenLinkInNewWindowLP" action="OpenLinkInNewWindow"/>
