@@ -1,5 +1,11 @@
 2005-12-05  Christian Persch  <chpe@cvs.gnome.org>
 
+	* data/ui/epiphany-ui.xml:
+
+	Remove a unused popup menu declaration.
+
+2005-12-05  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/glade/print.glade:
 	* embed/print-dialog.c: (ephy_print_setup_dialog_new):
 
